# minidisc

./: .gitignore  LICENSE  README.md  example-cfg.yaml  go.mod  go.sum
cmd/md/: main.go
docker/md-cli/: Dockerfile
go/: go.mod  go.sum
go/cmd/md/: main.go
go/pkg/mdgrpc/: resolver.go
go/pkg/minidisc/: logging.go  minidisc.go  minidisc_test.go
pkg/minidisc/: minidisc.go  minidisc_test.go
python/: minidisc.py  pyproject.toml
